# mathhook

./: .gitignore  Cargo.toml  Makefile  README.md  USAGE.md  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: benchmark.yml  docker-builder.yml  release.yml  security.yml  test.yml
crates/mathhook/: Cargo.toml  README.md
crates/mathhook-binding-codegen/: Cargo.toml
crates/mathhook-binding-codegen/src/emitter/: node.rs
crates/mathhook-core/: Cargo.toml
crates/mathhook-core/src/: formatter.rs
crates/mathhook-core/src/algebra/: equation_analyzer.rs  expand.rs
crates/mathhook-core/src/algebra/simplification/: trigonometric.rs
crates/mathhook-core/src/algebra/solvers/: linear.rs  systems.rs
crates/mathhook-core/src/calculus/: series.rs
crates/mathhook-core/src/calculus/integrals/: table.rs
crates/mathhook-core/src/core/expression/constructors/: basic.rs
crates/mathhook-core/src/core/expression/evaluation/: substitution.rs
crates/mathhook-core/src/core/expression/methods/: analysis.rs
crates/mathhook-core/src/core/polynomial/algorithms/zippel_gcd/: multivariate.rs  univariate.rs
crates/mathhook-core/src/core/polynomial/finite_field/: berlekamp.rs  element.rs  poly.rs
crates/mathhook-core/src/formatter/latex/: expressions.rs
crates/mathhook-core/src/matrices/: types.rs
crates/mathhook-core/src/matrices/decomposition/: cholesky.rs  qr.rs
crates/mathhook-core/src/matrices/unified/: decomposition.rs
crates/mathhook-core/src/simplify/: arithmetic.rs  functions.rs
crates/mathhook-core/src/simplify/arithmetic/: addition.rs  power.rs
crates/mathhook-core/tests/algebra_tests/: expansion.rs  matrices.rs  pattern_matching.rs
crates/mathhook-core/tests/calculus_tests/: series.rs
crates/mathhook-core/tests/e2e_tests/: system_solver.rs
crates/mathhook-core/tests/educational_tests/: noncommutative_steps.rs
crates/mathhook-core/tests/validation_tests/: simplification_tests.rs  special_functions_tests.rs
crates/mathhook-node/: package-lock.json  package.json
crates/mathhook-node/src/: functions.rs  lib.rs
crates/mathhook-python/: Cargo.toml  pyproject.toml
docker/: Dockerfile.builder  cargo-config.toml
docker/scripts/: build-node.sh  build-python.sh  build-rust.sh  publish.sh
docs/src/advanced/pde/: quick-start.md  user-guide.md
docs/src/getting-started/: installation.md
scripts/ci/: install-node-deps.sh  publish-npm.sh
