[package]
name = "mathhook-binding-codegen"
version = "0.1.0"
edition = "2021"
description = "Code generator for MathHook Python/Node.js bindings"
license.workspace = true
publish = false  # Internal dev tool, not published to crates.io

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
