[package]
name = "mathhook-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for MathHook mathematical engine"
publish = false  # Published to PyPI via maturin, not crates.io

[lib]
name = "mathhook_python"
# cdylib for Python extension, rlib for stub_gen binary to link against
crate-type = ["cdylib", "rlib"]

[dependencies]
mathhook-core = { path = "../mathhook-core", features = ["python-bindings"] }
mathhook-macros = { path = "../mathhook-macros", features = ["python-bindings"] }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38", "generate-import-lib"] }
pyo3-stub-gen = "0.7"
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[features]
default = ["python-bindings"]
python-bindings = []

[build-dependencies]
pyo3-build-config = "0.27.2"
