[package]
name = "mathhook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "High-performance educational computer algebra system with ergonomic Rust macros"

[dependencies]
mathhook-core = { version = "0.2.0", path = "../mathhook-core" }
num-bigint.workspace = true
num-rational.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

